<resources>
    <string name="app_name">TfgApp</string>
    <string name="explanation">ID User</string>
    <string name="openDrawerIcon">Abierto</string>
    <string name="closeDrawerIcon">Cerrado</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search items from ListView</string>
    <string-array name="cabecera_tabla">
        <item>Usuario</item>
        <item>Fecha</item>
        <item>Precio</item>
    </string-array>
    <string name="title_activity_login">Iniciar sesión</string>
    <string name="prompt_tsn">Número de terminal</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="error_invalid_tsn">Número de terminal incorrecto</string>
    <string name="error_too_short_password">Contraseña demasiado corta</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">El acceso a los contactos es necesario para autocompletar los campos del login
    </string>
    <string name="expense">Expense</string>
    <string name="numberUnitsPerDay">Número de pagos realizados por día</string>
    <string name="numberUnits">Número de unidades</string>
    <string name="dayGraph">Día</string>
    <string name="productUnits">Unidades de producto</string>
    <string name="soldProductUnits">Número de pagos por hora</string>
    <string name="soldUnits">Pagos realizados por hora</string>
    <string name="hoursGraph">Horas</string>
    <string name="incomesPerDay">Ingresos por día</string>
    <string name="incomes">Ingresos</string>
    <string name="legend_finanLineChart_1">Cantidad de ingresos (en</string>
    <string name="legend_finanLineChart_2">) por hora</string>
    <string name="legend_finanBarChart_1">Cantidad de ingresos (en</string>
    <string name="legend_finanBarChart_2">) por día</string>
    <string name="legend_barChartExample">Pagos realizados por día</string>
    <string name="euros_divisa">euros</string>
    <string name="legend_rechargesChart">Recargas de saldo realizadas por día</string>
    <string name="numberRechargesPerDay">Número de recargas realizadas por día</string>
    <string name="numberRechargesPerHour">Número de recargas realizadas por hora</string>
    <string name="rechargesPerHour">Recargas de saldo por hora</string>
    <string name="piechartTitle">Número de unidades vendidas de cada producto</string>
    <string name="categorySeriesTitlePieChart">Products Chart</string>
    <string name="X_opening_product">X </string>
    <string name="PRODUCT">product</string>
    <string name="onResultResponse">onResultResponse</string>
    <string name="euro_divisa_symbol">€</string>
    <string name="northamerica_divisa_symbol">$</string>
    <string name="totalPrice">Precio total: </string>
    <string name="DAY">day</string>
    <string name="completedPurchase">Compra realizada</string>
    <string name="insufficientMoney">No tiene dinero suficiente</string>
    <string name="ELLIPSIS"> ...</string>
    <string name="SHOP">Tienda</string>
    <string name="MOVEMENTS">Movimientos</string>
    <string name="BALANCE">Saldo</string>
    <string name="SETTINGS">Configuración</string>
    <string name="non_identified_user">Usuario no identificado</string>
    <string name="statistics">Estadísticas</string>
    <string name="logs">Logs</string>
    <string name="configuration">Configuración</string>
    <string name="exit">Cerrar sesión</string>
    <string name="DBProd">DBProd</string>
    <string name="tagReading">Lectura de la pulsera</string>
    <string name="unsupportedEncoding">Codificación no soportada</string>
    <string name="wrongMimeType">El tipo de datos mime no es correcto: </string>
    <string name="checkYourMimeType">Revise el tipo de datos mime</string>
    <string name="nfc_is_disabled">El NFC está deshabilitado </string>
    <string name="no_nfc_support_in_device">Este dispositivo no soporta NFC</string>
    <string name="recyclerCardTitle1">Productos</string>
    <string name="recyclerCardTitle2">Ingresos</string>
    <string name="recyclerCardTitle3">Recargas de saldo</string>
    <string name="recyclerCardTitle4">Pagos</string>
    <string name="registers">Registros</string>
    <string name="initialBalance">Saldo inicial</string>
    <string name="nameTab1">tabRegisters</string>
    <string name="nameTab2">tabStatistics</string>
    <string name="info_detailed_chart">Haga click en las barras del gráfico para ver información detallada por horas</string>
    <string name="purchase_summary">Resumen de compra</string>
    <string name="balance_after_purchase">Saldo tras la compra: </string>
    <string name="button_finish_purchase">Finalizar compra (2/2)</string>
    <string name="button_init_purchase">Continuar compra (1/2)</string>
    <string name="titleGraph_balanceMovements">Movimientos de saldo</string>
    <string name="no_data">No hay datos</string>
    <string name="not_found_user">El usuario especificado no ha sido encontrado para este evento</string>
    <string name="tag_id">tag_id</string>
    <string name="tag_code">tag_code</string>
    <string name="tag_description">tag_description</string>
    <string name="event_id">event_id</string>
    <string name="event_description">event_description</string>
    <string name="user_id">user_id</string>
    <string name="user_description">user_description</string>
    <string name="balance">balance</string>
    <string name="button_edit_settings">Guardar cambios</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="error">Error</string>
    <string name="message">Message</string>
    <string name="code">Code</string>
    <string name="data">Data</string>
    <string name="success">Success</string>
    <string name="requiredField">Campo requerido</string>
    <string name="maxLength32">Longitud máxima 32</string>
    <string name="maxLength9">Longitud máxima 9</string>
    <string name="maxLength10">Longitud máxima 10</string>
    <string name="titleAlertRemoveBracelet">Dar de baja pulsera</string>
    <string name="messageAlertRemoveBracelet">¿Está seguro de que desea dar de baja esta pulsera?</string>
    <string name="titleAlertInvalidPassword">La contraseña introducida es incorrecta. </string>
    <string name="messageAlertInvalidPassword">Contraseña incorrecta</string>
    <string name="titleAlertIdentificationError">Error de identificación</string>
    <string name="messageAlertIdentificationError1">Ha excedido el número máximo de intentos permitidos de identificación.</string>
    <string name="messageAlertIdentificationError2">Por favor, póngase en contacto con el administrador del sistema. </string>
    <string name="searchError">Error en la búsqueda</string>
    <string name="parsingError">Error de parsing: </string>
    <string name="tag">tag</string>
    <string name="removeBracelet">Dar de baja pulsera</string>
    <string name="addBracelet">Dar de alta pulsera</string>
    <string name="errorHasOcurred">Se ha producido un error</string>
    <string name="errorJsonResponse">Error de respuesta en JSON: </string>
    <string name="errorAddBracelet">Error en el proceso de alta</string>
    <string name="errorRemoveBracelet">Error en el proceso de baja</string>
    <string name="errorRechargeBalance">Error en el proceso de recarga</string>
    <string name="successAddBracelet">Se ha dado de alta correctamente la pulsera</string>
    <string name="successRemoveBracelet">Se ha dado de baja correctamente la pulsera</string>
    <string name="successRechargeBalance">La recarga se ha realizado con éxito</string>
    <string name="userEventNotFound">El usuario no ha sido encontrado para este evento</string>
    <string name="userNotFound">El usuario especificado no existe</string>
    <string name="braceletAlreadyExists">Esa pulsera ya está registrada</string>
    <string name="buttonTitleRemoveBracelet">Dar de baja</string>
    <string name="buttonTitleAddBracelet">Dar de alta</string>
    <string name="userAlreadyAssociatedToBracelet">Este usuario ya tiene una pulsera asociada para este evento</string>
    <string name="pleaseReviseErrors">Por favor revise los errores</string>
    <string name="pleaseFillFields">Por favor rellene todos los campos obligatorios</string>
    <string name="pleaseFillFieldsAndReviseError">Por favor revise los errores y rellene todos los campos obligatorios</string>
    <string name="nullEvent">Evento nulo</string>
    <string name="transactiontype_id">transactiontype_id</string>
    <string name="terminal_serial_number">terminal_serial_number</string>
    <string name="terminal_description">terminal_description</string>
    <string name="transaction_amount">transaction_amount</string>
    <string name="balanceRecharge">Recarga de saldo</string>
    <string name="messageAlertRechargeBalance1">¿Está seguro de que desea recargar</string>
    <string name="messageAlertRechargeBalance2">\?</string>
    <string name="payment">Pago</string>
    <string name="errorPayment">Error en el proceso de pago</string>
    <string name="successPayment">El pago se ha realizado correctamente</string>
    <string name="messageAlertPayment1">Va a realizar un pago de </string>
    <string name="messageAlertPayment2">. ¿Está seguro?</string>
    <string name="successSavingChanges">Sus cambios se han guardado correctamente</string>
    <string name="errorSavingChanges">Error guardando los cambios</string>
    <string name="transaction_date">transaction_date</string>
    <string name="loadingData">Cargando datos...</string>
    <string name="plusSymbol">+</string>
    <string name="minusSymbol">-</string>
    <string name="errorInsufficientBalance">Saldo insuficiente</string>
    <string name="number_of_transactions">number_of_transactions</string>
    <string name="total_amount">total_amount</string>
    <string name="day">day</string>
    <string name="noSuchElemExcep_message">El siguiente elemento no existe</string>
    <string name="illStateExcep_message">No puedes eliminar el elemento sin haber llamado antes al método next</string>
    <string name="hour">hour</string>
    <string name="bracelet_management">Gestión de pulseras</string>
    <string name="notProductsSelected">No ha seleccionado ningún producto</string>
    <string name="bracelet_name">Descripción</string>
    <string name="addingBraceletTitle">Nueva pulsera</string>
    <string name="bracelet_code">Código</string>
    <string name="bracelet_code_form">Código *</string>
    <string name="user_name">Usuario asociado</string>
    <string name="search_by_user">Buscar código por usuario asociado</string>
    <string name="enterPassword">Introduzca su contraseña: </string>
    <string name="currentBalance">Saldo actual:</string>
    <string name="quantityToRecharge">Cantidad a ingresar</string>
    <string name="recharge">Recargar</string>
    <string name="removeNfcBracelet">Baja pulsera nfc</string>
    <string name="json_id_product">id_product</string>
    <string name="json_name">name</string>
    <string name="json_price">price</string>
    <string name="json_products">products</string>
    <string name="pattern_dd_MM">dd/MM</string>
    <string name="pattern_dd">dd</string>
    <string name="id_drawable_add_bracelet">add_bracelet</string>
    <string name="id_drawable_delete_bracelet">delete_bracelet</string>
    <string name="drawable">drawable</string>
    <string name="pattern_logs">dd/MM/yy HH:mm</string>
    <string name="id_drawable_listdrawer_statistics">listdrawer_statistics</string>
    <string name="id_drawable_listdrawer_logs">listdrawer_logs</string>
    <string name="id_drawable_listdrawer_nfcbracelet">listdrawer_nfcbracelet</string>
</resources>