<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/tvTitleList"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="32sp"
            android:text="@string/addingBraceletTitle"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutTagCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/requiredInput"
                    app:counterEnabled="true"
                    app:counterMaxLength="32"
                    app:errorEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/bracelet_code_form"/>

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutTagName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="32"
                    app:errorEnabled="true">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/bracelet_name"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="64sp"
                    app:counterEnabled="true"
                    app:counterMaxLength="32"
                    app:errorEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/user_name"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/buttonAddSettings"
        style="?android:textAppearanceSmall"
        android:layout_alignParentBottom="true"
        android:fontFamily="sans-serif-thin"
        android:background="@color/colorIndigo"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="fill_horizontal"
        android:text="@string/buttonTitleAddBracelet"
        android:textStyle="bold"/>

</RelativeLayout>