<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/tvTitleList"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="32sp"
            android:text="@string/SETTINGS"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="32"
                app:errorEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/bracelet_name"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonEditSettings"
        style="?android:textAppearanceSmall"
        android:layout_alignParentBottom="true"
        android:fontFamily="sans-serif-thin"
        android:background="@color/colorIndigo"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="fill_horizontal"
        android:text="@string/button_edit_settings"
        android:textStyle="bold"/>

</RelativeLayout>