<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/tvTitleList"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="32sp"
            android:text="@string/removeNfcBracelet"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutTagCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/requiredInput"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    app:counterEnabled="true"
                    app:counterMaxLength="32"
                    app:errorEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/bracelet_code_form"/>

                </android.support.design.widget.TextInputLayout>
                <ru.dimorinny.floatingtextbutton.FloatingTextButton
                    android:id="@+id/action_button_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:floating_background_color="@color/colorIndigo"
                    app:floating_icon="@drawable/arrow_down_64"
                    app:floating_title="@string/search_by_user"
                    app:floating_title_color="@android:color/white" />

                <RelativeLayout
                    android:id="@+id/layoutSearchForUserName"
                    android:visibility="invisible"
                    android:orientation="horizontal"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="72dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputLayoutSearchForUserName"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:paddingTop="@dimen/activity_horizontal_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="68dp"
                        app:counterEnabled="true"
                        app:counterMaxLength="32"
                        app:errorEnabled="true">

                        <EditText
                            android:id="@+id/editTextSearchForUserName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text"
                            android:hint="@string/user_name"/>

                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/searchButtonForUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="36dp"
                        android:src="@android:drawable/ic_menu_search" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <Button
        android:id="@+id/buttonDeleteSettings"
        style="?android:textAppearanceSmall"
        android:layout_alignParentBottom="true"
        android:fontFamily="sans-serif-thin"
        android:background="@color/colorIndigo"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="fill_horizontal"
        android:text="@string/buttonTitleRemoveBracelet"
        android:textStyle="bold"/>

</RelativeLayout>